--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es5",
+        "target": "es6",
         "noImplicitAny": true,
         "sourceMap": false,
         "strictNullChecks": true, // if type is not null, the compiler will warn
-        "noEmitOnError": true, // don't create js files, if there are errors in TypeScript'
+        "noEmitOnError": false, // don't create js files, if there are errors in TypeScript'
         "noUnusedParameters": true
     },
     "exclude": [
