--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "module": "commonjs",
         "target": "es6",
         "noImplicitAny": true,
+        "experimentalDecorators": true,
         "sourceMap": false,
         "strictNullChecks": true, // if type is not null, the compiler will warn
         "noEmitOnError": false, // don't create js files, if there are errors in TypeScript'
