--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^2.0.33",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3"
   },
   "dependencies": {
+    "jquery": "^3.1.1",
     "systemjs": "^0.19.39"
   }
 }
