--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es6",
+        "target": "es5",
         "noImplicitAny": true,
         "experimentalDecorators": true,
         "sourceMap": false,
@@ -10,6 +10,8 @@
         "noUnusedParameters": true
     },
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "src/09-decorator/**",
+        "src/08-generic/**"
     ]
 }
