--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jquery": "^2.0.33",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^3.0.2",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3"
   },
