--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,10 @@
         "strictNullChecks": true, // if type is not null, the compiler will warn
         "noEmitOnError": false, // don't create js files, if there are errors in TypeScript'
         "noUnusedParameters": true
-    },
-    "exclude": [
-        "node_modules",
-        "src/09-decorator/**",
-        "src/08-generic/**"
-    ]
+    }//,
+    // "exclude": [
+    //     "node_modules",
+    //     "src/09-decorator/**",
+    //     "src/08-generic/**"
+    // ]
 }
