--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "start": "lite-server",
+    "build": "gulp",
+    "webpack": "webpack -d --watch",
+    "webpack:prod": "webpack -p"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/jquery": "^2.0.33",
     "gulp": "^3.9.1",
+    "gulp-mocha": "^3.0.1",
     "gulp-typescript": "^3.0.2",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3"
