React with TypeScript Finish the course

--- a/src/12-react/tsconfig.json
+++ b/src/12-react/tsconfig.json
@@ -2,16 +2,11 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es5",
-        "noImplicitAny": true,
-        "experimentalDecorators": true,
+        "noImplicitAny": false,
         "sourceMap": false,
-        "strictNullChecks": true, // if type is not null, the compiler will warn
-        "noEmitOnError": false, // don't create js files, if there are errors in TypeScript'
-        "noUnusedParameters": true
+        "jsx": "react"
     },
     "exclude": [
-        "node_modules",
-        "src/09-decorator/**",
-        "src/08-generic/**"
+        "node_modules"
     ]
 }
