--- a/src/12-react/package.json
+++ b/src/12-react/package.json
@@ -5,11 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
     "start": "lite-server"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
+  },
   "devDependencies": {
-    "lite-server": "^2.2.2"
+    "@types/react": "^0.14.41",
+    "@types/react-dom": "^0.14.18",
+    "ts-loader": "^0.9.1",
+    "typescript": "^2.0.3",
+    "webpack": "^1.13.2"
   }
 }
